# save-browser-session-macos

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/save_browser_session/: browser.py  formatter.py  main.py  processing.py  session_analyzer.py  session_history.py  ui.py  url_normalizer.py  utils.py
tests/: test_browser.py  test_cli_args.py  test_formatter_html.py  test_formatter_markdown.py  test_interactive_logic.py  test_processing.py  test_session_analyzer.py  test_session_history.py  test_url_normalizer.py  test_utils.py
