[project]
name = "save-browser-session"
version = "0.1.0"
description = "A powerful CLI and GUI tool to save browser tabs from Safari, Chrome, and more to Markdown files on macOS."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "rapjul", email = "46605047+rapjul@users.noreply.github.com" }
]
dependencies = [
  "pyperclip>=1.11.0",
  "rich>=14.2.0",
  "typer>=0.21.1",
]

keywords = [
  "applescript",
  "browser",
  "chrome",
  "cli",
  "jxa",
  "macos",
  "markdown",
  "safari",
  "tabs",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/rapjul/save-browser-session-macos"
Issues = "https://github.com/rapjul/save-browser-session-macos/issues"
Repository = "https://github.com/rapjul/save-browser-session-macos"

[project.scripts]
save-browser-session = "save_browser_session.main:app"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.14.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/save_browser_session"]

[tool.ruff.lint]
# Ignore unused type: ignore comments - these are needed for basedpyright
ignore = ["PGH003"]
